# macroemc_wmp

./: .dockerignore  .gitignore  Dockerfile  README.md  TestTask.md  docker-compose.yml  manage.py  pyproject.toml
frontend/: DptContext.jsx  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.js
frontend/src/components/: Dashboard.jsx  Login.jsx
frontend/templates/frontend/: index.html
macroemc_wmp/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
static_src/css/: styles.css
static_src/js/: base.js
templates/workplaces/: base.html  department_list.html  dpt_list.html  index.html  staff_list.html  workplaces_list.html  wp_list.html
templates/workplaces/partials/: department_form.html  department_row.html  dpt_row.html  navmenu.html  navpanel.html  spinner.html  staff_form.html  staff_row.html  task_status.html  workplace_form.html  workplace_row.html  wp_form.html  wp_row.html  wp_search.html
workplaces/: admin.py  faststream_app.py  forms.py  models.py  serializer.py  tasks.py  urls.py  views.py
workplaces/management/commands/: populate_db.py
workplaces/migrations/: 0001_initial.py  0002_alter_workplaces_ip_alter_workplaces_mac_and_more.py  0003_alter_department_options_alter_staff_options_and_more.py  0004_department_archived_staff_archived_and_more.py
