[project]
dependencies = [
  "django>=5.2.8",
  "psycopg2-binary>=2.9.9",
  "celery>=5.4.0",
  "redis>=5.0.8",
  "django-htmx>=1.18.0",
  "django-celery-results>=2.6.0",
  "colorlog>=6.8.2",
  "django-crispy-forms>=2.3",
  "crispy-tailwind>=0.5.0",
]
description = "Fullstack application for workplace management"
name = "macrogroup"
requires-python = ">=3.13"
version = "0.1.0"
